# BayeSED3

./: .cursorignore  .gitignore  .repomixignore  CLAUDE.md  LICENSE  README.md  bayesed.py  bayesed_gui.py  context7.json  index.html  pyproject.toml  requirements.txt  run_test.py  run_test2.py  setup.py
bayesed/: __init__.py  __main__.py  core.py  data.py  inference.py  model.py  params.py  plotting.py  prior.py  prior_manager.py  utils.py
bayesed/results/: __init__.py  base.py  bayesed_results.py  configuration_manager.py  data_loader.py  exceptions.py  file_discovery.py  logger.py  models.py  parameter_manager.py  utils.py  validation_engine.py
conda/: README.md  build.sh  cleanup.sh  meta.yaml  prepare_conda_forge.sh  prepare_conda_forge_submission.sh  quick_update.sh  release_with_gh.sh  update_package.sh
data/: extinction_curve_MW.txt
docs/: BayeSED3.md
filters/cigale/: convert
filters/eazy-photoz/: convert  filters.txt
models/: AGN_RL.txt  AGN_RQ.txt  Arp220.txt  BQSO1.txt  El_B2004a.txt  Ell13.txt  Ell2.txt  Ell5.txt  I19254.txt  I20551.txt  I22491.txt  Im_B2004a.txt  M82.txt  Mrk231.txt  N6090.txt  N6240.txt  QSO1.txt  QSO2.txt  S0.txt  SB2_B2004a.txt  SB3_B2004a.txt  Sa.txt  Sb.txt  Sbc_B2004a.txt  Sc.txt  Scd_B2004a.txt  Sd.txt  Sdm.txt  Sey18.txt  Sey2.txt  Spi4.txt  TQSO1.txt  Torus.txt  ssp_25Myr_z008.txt  ssp_5Myr_z008.txt
nets/: bc2003_hr_stelib_chab_neb_2000r_derived_pc.txt  bc2003_hr_stelib_chab_neb_2000r_pca.hdf5  bc2003_hr_stelib_chab_neb_2000r_spec_pc.txt  bc2003_hr_stelib_chab_neb_300r_derived_pc.txt  bc2003_hr_stelib_chab_neb_300r_pca.hdf5  bc2003_hr_stelib_chab_neb_300r_spec_pc.txt  bc2003_lr_BaSeL_chab.aknn  bc2003_lr_BaSeL_chab_derived.aknn  clumpy201410tor.fann  clumpy201410tor_derived.fann
observation/CESS_mock/: csp_sfh200_bc2003_hr_stelib_chab_neb_300r_i0100.iprior  csp_sfh201_bc2003_hr_stelib_chab_neb_300r_i0100.iprior  csp_sfh201_bc2003_hr_stelib_chab_neb_300r_i0100.iprior.1  filters_selected_csst.txt  plot_bestfit  plot_bestfit.py  two.txt
observation/agn_host_decomp/: csp_sfh801_bc2003_lr_BaSeL_chab_i0000.iprior  demo.ipynb  filters.txt  filters_selected.txt  filters_selected_total_only.txt  gb.iprior  plot_SED.py  run  sample.txt
observation/sdss/: convert.py
observation/sdss/spec/: spec-0285-51930-0184.fits  spec-0508-52366-0522.fits  spec-1008-52707-0558.fits  spec-1073-52649-0132.fits  spec-2091-53447-0584.fits  spec-9562-57817-0802.fits
observation/test/: 2dal8.iprior  AGN.iprior  FeII.iprior  NLR.iprior  agnsed.iprior  bbb.iprior  convert1.py  csp_sfh200_bc2003_hr_stelib_chab_neb_2000r_i0000.iprior  csp_sfh200_bc2003_hr_stelib_chab_neb_2000r_i0100.iprior  csp_sfh500_bc2003_hr_stelib_chab_neb_2000r_i0000.iprior  fagnsed.iprior  gal.txt  kin_con2.iprior.0  kin_con2.iprior.1  kin_con2.iprior.4  kin_eml2.iprior.1  kin_eml2.iprior.3  kin_eml2.iprior.5  kin_eml3.iprior.3  kin_eml3.iprior.5  lines_BLR.txt  lines_NLR.txt  plot_bestfit2.py  qso.txt  run
observation/test/output/: qso_0Stellar+Nebular_2dal8_10_1bbb_2dal7_15_2BLR_kin_eml3_13_3FeII_kin_con2_6_4NLR_kin_eml2_13_sys_err0.hdf5
observation/test/output/qso/spec-1008-52707-0558_QSO_BROADLINE/: 0Stellar+Nebular_2dal8_10_1bbb_2dal7_15_2BLR_kin_eml3_13_3FeII_kin_con2_6_4NLR_kin_eml2_13_sys_err0_sample_par.txt
observation/test1/: csp_sfh200_bc2003_lr_BaSeL_chab_i0000.iprior  csp_sfh200_bc2003_lr_BaSeL_kroup_i0000.iprior  filters_COSMOS_CSST_Euclid_LSST_WFIRST.txt  filters_COSMOS_seleted.txt  filters_CSST_Euclid_seleted.txt  filters_CSST_seleted.txt  run  test_inoise0.txt  test_inoise1.txt
observation/test2/: clumpy201410.iprior  clumpy201410tor.iprior  filters.txt  filters_selected.txt  plot_bestfit.py  run  test.txt
observation/test3/: csp_sfh201_bc2003_hr_stelib_chab_neb_300r_i0100.iprior  filters_bassmzl.txt  filters_selected_csst.txt  plot_bestfit.py  run  test_PASSIVE.txt  test_STARFORMING.txt
papers/: HanY2012a.md  HanY2012b.md  HanY2013a.md  HanY2014a.md  HanY2019a.md  HanY2020a.md  HanY2022b.md  HanY2023a.md
plot/: plot_bestfit.py  plot_bestfit_unified.py
skills/bayesed3/: SKILL.md
skills/bayesed3/references/: agn-fitting.md  binary-cli.md  galaxy-fitting.md  model-comparison.md  prior-management.md  results-analysis.md
tests/: README.md  quick_start.py  run_all_examples.py  run_test.py  run_test2.py  test_advanced_analytics.py  test_agn_fitting.py  test_bayesed_bagpipes_comparison.py  test_custom_model.py  test_data_arrays.py  test_multi_model_comparison.py  test_prior_management.py
tools/: bayesed2bagpipes.py
(+5 files in other folders)
